@@ -24,9 +24,9 @@ FILE *fp) /* what file to read from */
   limit = k = buffer; /* beginning of buffer */
   while (k<=buffer_end && (c=getc(fp)) != EOF && c!='\n')
     if ((*(k++) = c) != ' ') limit = k;
-  if (k>buffer_end)
-    if ((c=getc(fp))!=EOF && c!='\n') {
-      ungetc(c,fp); loc=buffer; err_print("! Input line too long");
+  if (k>buffer_end) {
+    while ((c=getc(fp))!=EOF && c!='\n'); /* discard rest of line */
+    loc=buffer; err_print("! Input line too long");
 @.Input line too long@>
     }
   if (c==EOF && limit==buffer) return false; /* there was nothing after
@@ -61,7 +61,7 @@ FILE *fp) /* what file to read from */
       return true;
     }
     else if (k>buffer_end) {
-      ungetc(c,fp); loc=buffer; err_print("! Input line too long");
+      while ((c=getc(fp))!=EOF && c!='\n' && c!='\r'); /* discard rest of line */
       return true;
 @.Input line too long@>
     }
